Final version of the game with UI and cosmetic stuff

--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head><link rel="stylesheet" href="style.css"></head>
+<head><link rel="stylesheet" href="style.css">
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet"> </head> -->
 <body>
+    <div id="description">
+        <h1>Rock Paper Scissors</h1>
+        <p> Score 5 points to win the game</p>
+        <h3>Choose your weapon!</h3>
+    </div>
     <div id="buttons">
         <button id="rock"></button>
         <button id="paper"></button>
         <button id="scissors"></button>
     </div>
 
-    <div id="score">
+    <div id="scorecontainer">
+        Scoreboard
+<div id="score">
+    Computer's score: 0 Your score: 0
+</div>
     </div>
     <div id="win_lose"></div>
 
