--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div id="description">
         <h1>Rock Paper Scissors</h1>
         <p> Score 5 points to win the game</p>
-        <h3>Choose your weapon!</h3>
+        <h3>Choose your weapon:</h3>
     </div>
     <div id="buttons">
         <button id="rock"></button>
